--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
-    <link rel="stylesheet" href="css/index.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="./static/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/index.css">
+
 </head>
 
 <body>
     <header>
-        <section>
-            <form action="">
-                <label for="title">ToDoList</label>
-                <input type="text" name="title" placeholder="添加ToDo" id="title">
-            </form>
+        <section class="container">
+            <label for="title">ToDoList</label>
+            <input type="text" name="title" placeholder="添加ToDo" id="title">
         </section>
+
     </header>
-    <section>
+    <section class="container">
         <h2>
             正在进行
             <span id="todocount">0</span>
@@ -37,6 +36,8 @@
         Copyright © 2014 todolist.cn
     </footer>
 
+    <script src="./js/jquery.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
