--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Copyright © 2014 todolist.cn
     </footer>
 
-    <script src="./js/jquery.js"></script>
+    <script src="./static/jquery.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
