--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <header>
         <section class="container">
-            <label for="title">ToDoList</label>
-            <input type="text" name="title" placeholder="添加ToDo" id="title">
+            <label for="title">Plan</label>
+            <input type="text" name="title" placeholder="添加计划" id="title">
+            <span class="clearall">清空计划</span>
         </section>
 
     </header>
@@ -33,7 +34,7 @@
         <ul id="donelist"></ul>
     </section>
     <footer>
-        Copyright © 2014 todolist.cn
+        仿<a href="http://todolist.cn/">todolist.cn</a>
     </footer>
 
     <script src="./static/jquery.js"></script>
