--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <section class="container">
-            <label for="title">Plan</label>
+            <label for="title">ToDoList</label>
             <input type="text" name="title" placeholder="添加计划" id="title">
             <span class="clearall">清空计划</span>
         </section>
@@ -38,6 +38,7 @@
     </footer>
 
     <script src="./static/jquery.js"></script>
+    <script src="js/digitalRain.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
